--- a/css/EC.css
+++ b/css/EC.css
@@ -1,3 +1,9 @@
+html, body{
+	font-family: sans-serif;
+	padding: 0px;
+	margin: 0px;
+}
+
 header{
 	background-color: #4DF4F5;
 	padding: 40px;
@@ -12,7 +18,12 @@ h1{
 header img{
 	border-radius: 25px;
 	border: 3px solid #000000;
-	box-shadow: transparent; box-shadow: black; box-shadow: left; box-shadow: 40px;
+	max-width: 100%;
+	min-width: 10%;
 }
 
+.medium{
+	max-width: 100%;
+	min-width: 10%;
+	}
 /*This is a CSS comment haha!*/
