--- a/css/EC.css
+++ b/css/EC.css
@@ -13,6 +13,8 @@ h1{
 	color: black;
 	font-size: 50px;
 	text-decoration: underline;
+	padding: 0px 400px 0px 400px;
+	position: middle;
 }
 
 header img{
@@ -22,8 +24,33 @@ header img{
 	min-width: 10%;
 }
 
+header a{
+	font-size: 30px;
+	color: brown;
+	padding: 0px 0px 200px 200px ;
+}
+
+h2{
+	font-size: 30px;
+	padding: 0px 0px 0px 20px;
+}
+
+p.caption1{
+	font-style: italic;
+	font-size: 20px;
+	padding: 0px 0px 0px 20px;
+}
+
+p.caption2{
+	font-style: italic;
+	font-size: 20px;
+	color: #C3C3C3
+}
+
 .medium{
 	max-width: 100%;
 	min-width: 10%;
+	padding-left: 20px;
+	padding-right: 20px;
 	}
 /*This is a CSS comment haha!*/
